--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.3",
+        "stripe": "^11.4.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
