--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.3",
         "stripe": "^11.4.0",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "dotenv": "^8.2.0"
     },
     "devDependencies": {
         "concurrently": "^6.0.2",
-        "dotenv": "^8.2.0",
         "nodemon": "^2.0.7"
     }
 }
