refactor: Made some changes

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 MONGODB_URI = 
 TOKEN_SECRET = 
-STRIPE_PUBLIC_KEY
-STRIPE_PRIVATE_KEY
+STRIPE_PUBLIC_KEY =
+STRIPE_PRIVATE_KEY =
+LOCAL_STRIPE_WEBHOOK_SECRET =
+FRONTEND_URL = 
